# dora-studio

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PRD.md  README.md
.github/workflows/: package.yml
src/: api.rs  app.rs  lib.rs  main.rs  tools.rs
src/chat/: chat_screen.rs  mod.rs
src/dataflow/: dataflow_table.rs  mod.rs
