[package]
name = "dora-studio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mofa-org/dora-studio"
description = "Dora Studio - AI Chat Application built with Makepad"

[dependencies]
# UI Framework (pure Rust)
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }

# Serialization (pure Rust)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async Runtime for native
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# HTTP client for native
reqwest = { version = "0.12", features = ["json"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Async runtime for WASM
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
# HTTP client for WASM
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
